@@ -6,6 +6,8 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Issue #49: Add six.moves mapping for tkinter.ttk.
+
 - Pull request #24: Add __dir__ special method to six.moves modules.
 
 - Issue #47: Fix add_metaclass on classes with a string for the __slots__
